#176 bugfix: вернуть z-index для блока контактов

--- a/src/features/Contacts/contacts.module.scss
+++ b/src/features/Contacts/contacts.module.scss
@@ -4,6 +4,7 @@
   position: fixed;
   right: 20px;
   bottom: 20px;
+  z-index: 999;
 }
 
 .contactsMenu {
